# 2sem-Lab3BMP-C

./: CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: build.yml
LAB 3 bmp (2 sem)/: functions.c
LAB 3/NUM1/: CMakeLists.txt  main.c
LAB 3/NUM2/: CMakeLists.txt  error.h  main.c
LAB 3/NUM3/: CMakeLists.txt  main.c
LAB 4/: task1.c  task2.c  task3.c
LAB 5/: arrays.c  arrays.h  task1.c  task2.c  task3.c
LAB 5/task 1/: arrays.c  arrays.h  task1.c
LAB 5/task 2/: arrays.c  arrays.h  task2.c
LAB 5/task 3/: arrays.c  arrays.h  task3.c
LAB 6/task1/: arrays.c  arrays.h  main.c
LAB 6/task2/: main.c
LAB 7/: main.c  str.c  str.h
Lab1Structures/: CMakeLists.txt  functions.c  functions.h
Lab2Compressor/: CMakeLists.txt  functions.c  functions.h  main.c
Lab2Decompressor/: CMakeLists.txt  functions.h  main.c
Lab3BMP/: CMakeLists.txt  main.c
decompr/: .gitignore  CMakeLists.txt  functions.c  main.c
labBMP75248/: CMakeLists.txt  functions.c  functions.h  main.c
labStruct/: CMakeLists.txt  functions.c  functions.h  html.txt  main.c  sonar-project.properties
pratcie/: CMakeLists.txt  arrays.c  arrays.h  main.c
