cmake_minimum_required(VERSION 3.24)
project(C-labs2sem-BSUIR)

set(CMAKE_C_STANDARD 99)

add_executable(C-labs2sem-BSUIR Lab1Structures/main.c Lab1Structures/functions.c Lab1Structures/functions.h Lab2Compressor/main.c Lab2Compressor/functions.c Lab2Compressor/functions.h Lab2Decompressor/main.c Lab2Decompressor/functions.c Lab2Decompressor/functions.h Lab3BMP/main.c Lab3BMP/functions.c Lab3BMP/functions.h)
